@@ -116,8 +116,8 @@ t/test22-strevala.p
 t/test22-strevala.rdt
 t/test22-strevala.t
 t/test23-strevall.p
-t/test23-strevall.t
 t/test23-strevall.rdt
+t/test23-strevall.t
 t/test30-fork-0.p
 t/test30-fork-0.rdt
 t/test30-fork-0.t
@@ -150,7 +150,11 @@ t/test70-subexcl.t
 t/test80-recurs.p
 t/test80-recurs.rdt
 t/test80-recurs.t
+t/zzz.t
 typemap
+xt/test23-strevalxs.p
+xt/test23-strevalxs.rdt
+xt/test23-strevalxs.t
 xt/test45-overload.p
 xt/test71-while.p
 xt/test90-stress.p
