@@ -556,7 +556,7 @@ $reporter->report();
 
 output_subs_indexpage($reporter, "index-subs-excl.html", 'excl_time');
 output_subs_indexpage($reporter, "index-subs-incl.html", 'incl_time');
-#output_package_treemap($reporter, "package-treemap.html");
+output_package_treemap($reporter, "package-treemap.html");
 output_indexpage($reporter, "index.html");
 
 output_js_files($reporter);
@@ -649,7 +649,7 @@ sub output_indexpage {
 
     print OUT file_table($profile, $stats, 1);
 
-    #print OUT q{<br/><a href="package-treemap.html">Package treemap</a><br/>};
+    print OUT q{<br/><a href="package-treemap.html">Package treemap</a><br/>};
 
     print OUT package_tables($profile);
 
@@ -666,20 +666,9 @@ sub output_package_treemap {
     open(OUT, '>', "$opt{out}/$filename")
         or croak "Unable to open file $opt{out}/$filename: $!";
 
-    my $jstmdir = "js/js-treemap";
     my $treemap_head = qq{
-	<script language="JavaScript" src="$jstmdir/BoxAnimator.js"></script>
-	<script language="JavaScript" src="$jstmdir/Decorators.js"></script>
-	<script language="JavaScript" src="$jstmdir/TreeMap.js"></script>
-	<script language="JavaScript" src="$jstmdir/DivTreeMap.js"></script>
-	<script language="JavaScript" src="$jstmdir/NodeFacade.js"></script>
-	<script language="JavaScript" src="$jstmdir/Rectangle.js"></script>
-	<script language="JavaScript" src="$jstmdir/TreeNode.js"></script>
-	<script language="JavaScript" src="$jstmdir/TreeNodeAdaptor.js"></script>
-	<script language="JavaScript" src="$jstmdir/TreeNodeShader.js"></script>
-	<script language="JavaScript" src="$jstmdir/Util.js"></script>
-	<script language="JavaScript" src="$jstmdir/XmlAdaptor.js"></script>
-	<script language="JavaScript" src="$jstmdir/XmlShader.js"></script>
+	<link type="text/css" rel="stylesheet" href="js/jit/Treemap.css" />
+	<script language="JavaScript" src="js/jit/jit.js"></script>
     };
 
     print OUT get_html_header("Package Treemap - NYTProf", {
@@ -693,95 +682,326 @@ sub output_package_treemap {
         title => "Performance Profile Subroutine Index",
         body_onload => "init();"
     ) if 0;
-    print OUT qq{<body onload="createGUI();">};
+    print OUT qq{<body onload="init();">};
 
     local $Data::Dumper::Sortkeys = 1;
     local $Data::Dumper::Indent = 1;
     local $Data::Dumper::Maxdepth = 3;
     #warn Data::Dumper::Dumper($profile->package_subinfo_map(1,1));
-    my $package_tree_subinfo_map = $profile->package_subinfo_map(1,1);
+    #my $package_tree_subinfo_map = $profile->package_subinfo_map(1,1);
 
-    # {   "id":"node02", "name":"0.2", "data":[ {"key":"key1", "value":195}, {"key":"key2", "value":5}], "children":[ ... ] }
-    my $node_mapper;
-    $node_mapper = sub {
-        my ($k, $v, $path, $depth) = @_;
-        # { main => { '' => [...] } }
-        # { Foo => { '' => [...], '::Bar' => { ''=>[...], '::Baz'=>[...] } } }
-        my $pad = "\t" x $depth;
-
-        #if (ref $v eq 'HASH' and keys %$v == 1 and $v->{''}) { $v = $v->{''}; }
-
-        my $title = @$path ? '::'.$path->[-1] : $k || 'main';
-        if (ref $v eq 'ARRAY') { # leaf node
-            return sprintf qq{%snew TreeNode( "%s", %s )},
-                $pad, "subs", $v->[0]->excl_time;
-        }
-        my @kids = map { $node_mapper->($_, $v->{$_}, [ @$path, $_ ], $depth+1) } keys %$v;
-        return sprintf qq{%snew TreeParentNode( "%s", [\n%s\n%s] )},
-            $pad, $title, join(",\n", @kids), $pad;
-    };
-
-    my $nodes = $node_mapper->('', $package_tree_subinfo_map, [], 0);
-    #warn $nodes;
-
-    print OUT qq{
-<script type="text/javascript">
-
-function createGUI()
-{
-    // Load the XML from the server
-    var filename = "js/treeNodes.json";
-
-    var request = createAjaxRequest();
-    request.onreadystatechange = function () {
-        if( request.readyState != 4 )
-            return;
-        if( 0 != request.status && request.status != 200 ) {
-            alert("Cannot GET '" + filename + "' (" + request.status + ")");
-            return;
-        }
-
-        // Evaluate the JSON
-        var rootNode = $nodes;
-
-        // Render the DIV treemap
-        var mapDIV = document.getElementById( "myDiv" );
-        var map = new DivTreeMap( mapDIV, rootNode, {
-                shader: new TreeNodeShader( rootNode )
-        } );
-
-        // Set up surrounding GUI controls
-        var infoBox = document.getElementById( "infoBox" );
-        var backButton = document.getElementById( "backButton" );
-        backButton.disabled = true;
-        
-        map.onMouseOver = function( node ) { infoBox.innerHTML = node.toString(); }; 
-        map.onMouseOut  = function( node ) { infoBox.innerHTML = "&nbsp;"; }; 
-        map.onZoomClick = function( node ) { map.zoom(); backButton.disabled = false; }
-        map.onBoxClick  = function( node ) { map.zoom(); backButton.disabled = false; }
-        backButton.onclick = function() { backButton.disabled = ( 0 === map.unzoom() ); };
-
-        // Define & plug in a resize hook
-        window.onresize = function() { map.checkResize(); };
-        map.checkResize();
-    };
-    request.open( 'GET', filename, true );
-    request.send( null );
-}
-
-function attrToString( attr )
-{
-    return attr.nodeName + "=" + attr.nodeValue;
+    print OUT q{
+<script language="JavaScript">
+function init() {
+var json = {
+    "id": "node02",
+    "name": "0.2",
+    "data": {
+        "$area": 195,
+        "$color": 5
+    },
+    "children": [{
+        "id": "node13",
+        "name": "1.3",
+        "data": {
+            "$area": 23,
+            "$color": 8
+        },
+        "children": [{
+            "id": "node24",
+            "name": "2.4",
+            "data": {
+                "$area": 6,
+                "$color": -75
+            },
+            "children": []
+        }, {
+            "id": "node25",
+            "name": "2.5",
+            "data": {
+                "$area": 9,
+                "$color": -48
+            },
+            "children": []
+        }, {
+            "id": "node26",
+            "name": "2.6",
+            "data": {
+                "$area": 1,
+                "$color": -1
+            },
+            "children": []
+        }, {
+            "id": "node27",
+            "name": "2.7",
+            "data": {
+                "$area": 7,
+                "$color": 25
+            },
+            "children": []
+        }]
+    }, {
+        "id": "node18",
+        "name": "1.8",
+        "data": {
+            "$area": 17,
+            "$color": 28
+        },
+        "children": [{
+            "id": "node29",
+            "name": "2.9",
+            "data": {
+                "$area": 8,
+                "$color": -28
+            },
+            "children": []
+        }, {
+            "id": "node210",
+            "name": "2.10",
+            "data": {
+                "$area": 9,
+                "$color": -83
+            },
+            "children": []
+        }]
+    }, {
+        "id": "node111",
+        "name": "1.11",
+        "data": {
+            "$area": 25,
+            "$color": -82
+        },
+        "children": [{
+            "id": "node212",
+            "name": "2.12",
+            "data": {
+                "$area": 8,
+                "$color": -27
+            },
+            "children": []
+        }, {
+            "id": "node213",
+            "name": "2.13",
+            "data": {
+                "$area": 3,
+                "$color": -80
+            },
+            "children": []
+        }, {
+            "id": "node214",
+            "name": "2.14",
+            "data": {
+                "$area": 7,
+                "$color": -73
+            },
+            "children": []
+        }, {
+            "id": "node215",
+            "name": "2.15",
+            "data": {
+                "$area": 7,
+                "$color": 26
+            },
+            "children": []
+        }]
+    }, {
+        "id": "node116",
+        "name": "1.16",
+        "data": {
+            "$area": 17,
+            "$color": 91
+        },
+        "children": [{
+            "id": "node217",
+            "name": "2.17",
+            "data": {
+                "$area": 7,
+                "$color": 48
+            },
+            "children": []
+        }, {
+            "id": "node218",
+            "name": "2.18",
+            "data": {
+                "$area": 10,
+                "$color": -86
+            },
+            "children": []
+        }]
+    }, {
+        "id": "node119",
+        "name": "1.19",
+        "data": {
+            "$area": 52,
+            "$color": -77
+        },
+        "children": [{
+            "id": "node220",
+            "name": "2.20",
+            "data": {
+                "$area": 8,
+                "$color": 64
+            },
+            "children": []
+        }, {
+            "id": "node221",
+            "name": "2.21",
+            "data": {
+                "$area": 5,
+                "$color": 84
+            },
+            "children": []
+        }, {
+            "id": "node222",
+            "name": "2.22",
+            "data": {
+                "$area": 6,
+                "$color": 81
+            },
+            "children": []
+        }, {
+            "id": "node223",
+            "name": "2.23",
+            "data": {
+                "$area": 1,
+                "$color": 25
+            },
+            "children": []
+        }, {
+            "id": "node224",
+            "name": "2.24",
+            "data": {
+                "$area": 4,
+                "$color": 18
+            },
+            "children": []
+        }, {
+            "id": "node225",
+            "name": "2.25",
+            "data": {
+                "$area": 10,
+                "$color": 37
+            },
+            "children": []
+        }, {
+            "id": "node226",
+            "name": "2.26",
+            "data": {
+                "$area": 8,
+                "$color": 83
+            },
+            "children": []
+        }, {
+            "id": "node227",
+            "name": "2.27",
+            "data": {
+                "$area": 10,
+                "$color": -62
+            },
+            "children": []
+        }]
+    }, {
+        "id": "node128",
+        "name": "1.28",
+        "data": {
+            "$area": 37,
+            "$color": -40
+        },
+        "children": [{
+            "id": "node229",
+            "name": "2.29",
+            "data": {
+                "$area": 8,
+                "$color": -67
+            },
+            "children": []
+        }, {
+            "id": "node230",
+            "name": "2.30",
+            "data": {
+                "$area": 8,
+                "$color": 46
+            },
+            "children": []
+        }, {
+            "id": "node231",
+            "name": "2.31",
+            "data": {
+                "$area": 4,
+                "$color": -99
+            },
+            "children": []
+        }, {
+            "id": "node232",
+            "name": "2.32",
+            "data": {
+                "$area": 8,
+                "$color": -38
+            },
+            "children": []
+        }, {
+            "id": "node233",
+            "name": "2.33",
+            "data": {
+                "$area": 1,
+                "$color": -3
+            },
+            "children": []
+        }, {
+            "id": "node234",
+            "name": "2.34",
+            "data": {
+                "$area": 8,
+                "$color": 82
+            },
+            "children": []
+        }]
+    }, {
+        "id": "node135",
+        "name": "1.35",
+        "data": {
+            "$area": 24,
+            "$color": 63
+        },
+        "children": [{
+            "id": "node236",
+            "name": "2.36",
+            "data": {
+                "$area": 10,
+                "$color": 8
+            },
+            "children": []
+        }, {
+            "id": "node237",
+            "name": "2.37",
+            "data": {
+                "$area": 8,
+                "$color": 63
+            },
+            "children": []
+        }, {
+            "id": "node238",
+            "name": "2.38",
+            "data": {
+                "$area": 6,
+                "$color": 46
+            },
+            "children": []
+        }]
+    }]
+};
+    var tm = new TM.Squarified({
+                rootId: 'infovis'
+             });
+    tm.loadJSON(json);
 }
 </script>
     };
+
     my $pkg_html;
     $pkg_html .= qq{
-<div class="divBox" style="position: relative; width: 100%; margin-top: 3px">
-	<button style="right: 0px;" id="backButton">Back</button>
-	<span id="infoBox"></span>
+<div id="infovis">
 </div>
-<div class="divBox" id="myDiv" style="height: 80%; width: 100%; background: #7777AA"></div>
     };
     print OUT $pkg_html;
 
