@@ -1,0 +1,42 @@
+attribute	application	test23-strevalxs.p
+attribute	basetime	0
+attribute	clock_id	0
+attribute	nv_size	0
+attribute	perl_version	0
+attribute	profiler_duration	0
+attribute	profiler_end_time	0
+attribute	profiler_start_time	0
+attribute	ticks_per_sec	0
+attribute	total_stmts_discounted	0
+attribute	total_stmts_duration	0
+attribute	total_stmts_measured	0
+attribute	total_sub_calls	0
+attribute	xs_version	0
+fid_block_time	1	4	0	0
+fid_block_time	1	4	1	1
+fid_block_time	1	4	2	1	[ 0 1 ]
+fid_fileinfo	1	[ test23-strevalxs.p   1 2 0 0 ]
+fid_fileinfo	1	sub	main::BEGIN	2-2
+fid_fileinfo	1	call	4	Devel::NYTProf::Test::example_xsub_eval	[ 1 0 0 0 0 0 0 ]
+fid_fileinfo	1	eval	4	[ 1 0 ]
+fid_fileinfo	2	[ (eval 0)[test23-strevalxs.p:4] 1 4 2 2 0 0 ]
+fid_fileinfo	2	call	1	Devel::NYTProf::Test::example_xsub	[ 1 0 0 0 0 0 0 ]
+fid_fileinfo	3	[ Devel/NYTProf/Test.pm   3 4 0 0 ]
+fid_fileinfo	3	sub	Devel::NYTProf::Test::example_sub	13-13
+fid_fileinfo	3	sub	Devel::NYTProf::Test::example_xsub	0-0
+fid_fileinfo	3	sub	Devel::NYTProf::Test::example_xsub_eval	0-0
+fid_line_time	1	4	0	0
+fid_line_time	1	4	1	1
+fid_line_time	1	4	2	1	[ 0 1 ]
+fid_sub_time	1	4	0	0
+fid_sub_time	1	4	1	1
+fid_sub_time	1	4	2	1	[ 0 1 ]
+profile_modes	fid_block_time	block
+profile_modes	fid_line_time	line
+profile_modes	fid_sub_time	sub
+sub_subinfo	Devel::NYTProf::Test::example_sub	[ 3 13 13 0 0 0 0 0 ]
+sub_subinfo	Devel::NYTProf::Test::example_xsub	[ 3 0 0 1 0 0 0 0 ]
+sub_subinfo	Devel::NYTProf::Test::example_xsub	called_by	2	1	[ 1 0 0 0 0 0 0 ]
+sub_subinfo	Devel::NYTProf::Test::example_xsub_eval	[ 3 0 0 1 0 0 0 0 ]
+sub_subinfo	Devel::NYTProf::Test::example_xsub_eval	called_by	1	4	[ 1 0 0 0 0 0 0 ]
+sub_subinfo	main::BEGIN	[ 1 2 2 0 0 0 0 0 ]
